# AITravelPlanner_BackEnd

./: .env.example  .gitignore  README.md  create_tables_postgresql.sql  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  run.py
.trae/rules/: project_rules.md
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
app/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py
app/middleware/: rate_limit.py
app/models/: __init__.py  conversation.py  expense.py  task.py  trip.py  trip_detail.py  user.py
app/prompts/: chitchat.md  create_trip.md  系统提示词.md
app/routers/: auth.py  chat.py  chat_router.py  expenses.py  expenses_router.py  map.py  speech.py  speech_router.py  trip_details.py  trip_details_router.py  trips.py  trips_router.py  users.py  users_router.py
app/schemas/: __init__.py  ai.py  ai_tool.py  auth.py  chat.py  expense.py  map.py  prompt.py  speech.py  trip.py  trip_detail.py  user.py
app/services/: ai_tool_service.py  chat_client.py  conversation_service.py  log_utils.py  prompt_service.py  speech_service.py
docs/: api_documentation.md  detailed_api_specification.md  接口移除修改计划.md
