[project]
name = "ai-travel-planner-backend"
version = "0.1.0"
description = "AI Travel Planner Backend API"
authors = [
    {name = "AI Travel Planner Team"}
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.3.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.3.7",
    "websockets>=12.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
# uv-specific configuration
# Enable faster dependency resolution
resolution = "highest"

# Configure dependency caching
cache-dir = ".uv-cache"

[tool.uv.pip]
# Configure pip index sources
index-url = "https://pypi.org/simple/"

# Optional: Configure trusted hosts if needed
# trusted-hosts = ["pypi.org"]

[tool.uv.sources]
# Configure package sources if needed
# Example:
# ai-travel-planner-backend = { path = "." }





[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
